Fixed overlapping of the header on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ header{
 }
 @media screen and (max-width: 260px){
     .app, .loader-container{
-        margin: 40px 0%;
+        margin: 100px 0%;
         min-height: 53vh;
     }
 }
